# flashlight-GLUI-example

./: .gitignore  LICENSE  README.md
flashlight/: CMakeLists.txt  Makefile  flashlight.vcxproj  flashlight.vcxproj.filters  interactions.h  kernel.cu  main.cpp
flashlight/include/GL/: glui.h
flashlight/src/: kernel.h
libs/: FindGLUIlocal.cmake  FindGLUIlocal_old.cmake
libs/glui/: CMakeLists.txt  readme.txt
